--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>Shivani Shahi</h1>
     <img src ="./folder1/img2.jpg" height="200" alt="shivani image"/>
     <h2>Objective</h2>
+    <hr />
     <p>I aim to start my career in a dynamic, growth-oriented environment where I can apply my 
 knowledge, learn from experienced professionals, and continuously develop my skills. I 
 am committed to contributing meaningfully to projects, adapting to emerging 
@@ -41,7 +42,7 @@ consistent performance.</p>
 <h2>Skills</h2>
 <hr />
 <ul>
-  <li>Programming Languages:  ava,  Python, HTML, JavaScript, C </li>
+  <li>Programming Languages:  Java,  Python, HTML, JavaScript, C </li>
   <li>Libraries/Frameworks: React.js  </li>
   <li>Tools/Platforms:  VS code</li>
 </ul>
