--- a/folder1/2.4 Movie Ranking Project/index.html
+++ b/folder1/2.4 Movie Ranking Project/index.html
@@ -2,7 +2,7 @@
  <h1>The best movies according to shivani</h1>
  <h2>My top 3 Movies of all-Time</h2>
  <hr />
- <h3>3 idiot</h3>
+ <h3>3 Ediot</h3>
  <h4>best movie over indian education</h4>
  <h3>lunchbox</h3>
  <h4>best to understand society stereotype</h4>
